--- a/Jemn/pom.xml
+++ b/Jemn/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<!-- <version>2.5.6</version> -->
+		</dependency>
 	</dependencies>
 
 	<build>
