--- a/Jemn/src/main/resources/application.properties
+++ b/Jemn/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/jemn
 spring.datasource.username=postgres
-spring.datasource.password=pol85lop
+spring.datasource.password=150720
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
