--- a/Jemn/src/main/resources/env/mail.properties
+++ b/Jemn/src/main/resources/env/mail.properties
@@ -1,4 +1,4 @@
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
-mail.smtp.username=michael21rj@gmail.com
-mail.smtp.password=lhqrqxdfhmngiois
+mail.smtp.username=eduardoangelo300@gmail.com
+mail.smtp.password=gcuhivjjflbqvahu
